fixed wrapping through CSS

--- a/frontend/WebCalculator/src/app/expression/expression.component.scss
+++ b/frontend/WebCalculator/src/app/expression/expression.component.scss
@@ -8,4 +8,6 @@
   width: 50vw;
 
   margin: 30px 20px;
+
+  word-wrap: break-word;
 }
